--- a/index.html
+++ b/index.html
@@ -139,13 +139,15 @@
           <h2 class="section-title">Чем мы занимаемся</h2>
           <ul class="list work-list">
             <li class="work-item">
-              <img
+              <p class="work-name">Десктопные приложения</p>
+              <img class="images"
                 src="./images/work/code.jpg"
                 alt="программист, работающий в офисе"
                 width="370"
               />
             </li>
             <li class="work-item">
+              <p class="work-name">Мобильные приложения</p>
               <img
                 src="./images/work/mobile.jpg"
                 alt="веб-дизайнеры интерфейса разрабатывают приложение для смартфонов команда создателей работает интерфейс мобильных телефонов"
@@ -153,6 +155,7 @@
               />
             </li>
             <li class="work-item">
+              <p class="work-name">Дизайнерские решения</p>
               <img
                 src="./images/work/visual.jpg"
                 alt="творческий художник веб-дизайн с рабочим цветом выбор графического планшета"
