--- a/index.html
+++ b/index.html
@@ -73,7 +73,17 @@
       <section class="hero">
         <div class="container hero-group">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-          <button class="btn" type="button">Заказать услугу</button>
+          <button class="btn" type="button" data-modal-open>Заказать услугу</button>
+          <div class="backdrop" data-modal>
+            <div class="modal-wrapper">
+              <button class="modal-btn" data-modal-close>
+                <svg width="" height="">
+                  <use href=""></use>
+                </svg>
+              </button>
+              <form class="modal-form"></form>
+            </div>
+          </div>
         </div>
       </section>
       <!--Преимущества-->
@@ -429,5 +439,6 @@
         </div>
       </div>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
