--- a/index.html
+++ b/index.html
@@ -69,17 +69,18 @@
     </header>
     <!--Контент-->
     <main>
+      <!--               <svg width="" height="">
+                  <use href=""></use>
+                </svg> -->
       <!--Герой-->
       <section class="hero">
         <div class="container hero-group">
           <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
           <button class="btn" type="button" data-modal-open>Заказать услугу</button>
-          <div class="backdrop" data-modal>
+          <div class="backdrop is-hidden" data-modal>
             <div class="modal-wrapper">
-              <button class="modal-btn" data-modal-close>
-                <svg width="" height="">
-                  <use href=""></use>
-                </svg>
+              <button class="modal-btn" data-modal-close> X
+ 
               </button>
               <form class="modal-form"></form>
             </div>
