--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
             </li>
             <li class="nav-item">
               <a class="link navigation-link" href="./portfolio.html"
-                >Портфолио</a
-              >
+                >Портфолио</a>
             </li>
             <li class="nav-item">
               <a class="link navigation-link" href="#">Контакты</a>
@@ -51,19 +50,15 @@
         <!--Контакты-->
         <ul class="list contakts">
           <li class="contakts-item">
-            <a class="link contakts-link" href="mailto:info@devstudio.com"></a>
+            <a class="link contakts-link" href="mailto:info@devstudio.com">
               <svg class="contakts-icon" width="16" height="12">
                 <use href="./images/sprite.svg#icon-envelope"></use>
-              </svg>
-              info@devstudio.com</a
-            >
+              </svg>info@devstudio.com</a>
           </li>
           <li class="contakts-item">
             <a class="link contakts-link" href="tel:+380961111111">
               <svg class="contakts-icon" width="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone"></use></svg
-              >+38 096 111 11 11</a
-            >
+                <use href="./images/sprite.svg#icon-smartphone"></use></svg>+38 096 111 11 11</a>
           </li>
         </ul>
       </div>
@@ -406,8 +401,7 @@
                       class="socials-link link"
                       href="target_blank"
                       rel="noopener noreferrer"
-                      aria-label="иконка "
-                    >
+                      aria-label="иконка ">
                       <svg class="socials-icon" width="20" height="20">
                         <use href="./images/sprite.svg#icon-facebook"></use>
                       </svg>
@@ -439,42 +433,36 @@
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="clients-icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-yaco"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-yaco"></use></svg></a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="clients-icon" width="106" height="60">
                   <use
                     href="./images/sprite.svg#icon-companytaglinehere"
-                  ></use></svg
-              ></a>
+                  ></use></svg></a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="clients-icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-company"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-company"></use></svg></a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="clients-icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-fosterpeters"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-fosterpeters"></use></svg></a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="clients-icon" width="106" height="60">
-                  <use href="./images/sprite.svg#icon-brand"></use></svg
-              ></a>
+                  <use href="./images/sprite.svg#icon-brand"></use></svg></a>
             </li>
             <li class="clients-item">
               <a class="clients-link" href=""
                 ><svg class="clients-icon" width="106" height="60">
                   <use
                     href="./images/sprite.svg#icon-companytagline"
-                  ></use></svg
-              ></a>
+                  ></use></svg></a>
             </li>
           </ul>
         </div>
