--- a/portfolio.html
+++ b/portfolio.html
@@ -63,8 +63,7 @@
           <li class="contakts-item">
             <a class="link contakts-link" href="tel:+380961111111">
               <svg class="contakts-icon" width="10" height="16">
-                <use href="./images/sprite.svg#icon-smartphone"></use></svg
-              >+38 096 111 11 11
+                <use href="./images/sprite.svg#icon-smartphone"></use></svg              >+38 096 111 11 11
             </a>
           </li>
         </ul>
